# layered-edm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
layered_edm/: __init__.py  base_layer.py  collections.py  layer_awkward.py  layer_nested.py  layer_servicex.py  layer_terminal.py  util_compat.py  util_types.py
tests/: conftest.py  test_base_layer.py  test_layer_awkward.py  test_layer_nested.py  test_layer_servicex.py  test_util_types.py
