[tool.poetry]
name = "layered-edm"
version = "0.1.0"
description = ""
authors = ["Gordon Watts <gwatts@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
uproot = "^4.2.0"
awkward = "^1.8.0"
func-adl = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
